AM_CPPFLAGS = -I$(top_srcdir)/src $(all_includes)

noinst_LIBRARIES = libmiramodules.a
libmiramodules_a_SOURCES= mod_sqt.C mod_sigconex.C mod_scaffold.C mod_bait.C mod_dbgreplay.C mod_diff.C mod_mer.C mod_mira.C mod_convert.C mod_memestim.C mod_tagsnp.C misc.C
noinst_HEADERS= mod_sqt.H mod_sigconex.H mod_scaffold.H mod_bait.H mod_diff.H mod_mer.H mod_mira.H mod_convert.H mod_memestim.H mod_tagsnp.H misc.H
