
#EXTRA_DIST = fixACE4consed.tcl fasta2frag.tcl
#
#install-exec-hook:
#	mkdir -p $(DESTDIR)/$(bindir) && \
#	rm -f $(DESTDIR)/$(bindir)/fixACE4consed.tcl && \
#	cp fixACE4consed.tcl $(DESTDIR)$(bindir) && \
#	rm -f $(DESTDIR)/$(bindir)/fasta2frag.tcl && \
#	cp fasta2frag.tcl $(DESTDIR)/$(bindir)
#
#uninstall-hook:
#	rm -f $(DESTDIR)/$(bindir)/fixACE4consed.tcl
#	rm -f $(DESTDIR)/$(bindir)/fasta2frag.tcl
