AM_CPPFLAGS = -I$(top_srcdir)/src $(all_includes)

noinst_LIBRARIES = libmirautil.a libmiradptools.a libmirafmttext.a
libmirautil_a_SOURCES= machineinfo.C fileanddisk.C misc.C
libmiradptools_a_SOURCES= dptools.C
libmirafmttext_a_SOURCES= fmttext.C
noinst_HEADERS= misc.H dptools.H progressindic.H memusage.H machineinfo.H fileanddisk.H stlimprove.H boostiostrutil.H fmttext.H prettyprint_container.H timer.H
